# neuron-shim

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
config/: neuron-shim.conf
include/: RuntimeAPI.h  backend.h  config.h  model_resolver.h
src/: backend_onnx.c  backend_selector.c  backend_stub.c  backend_tflite.c  config.c  model_resolver.c  shim_apusys.c  shim_runtime.c
tests/: test_basic.c
